--- a/profile_app/templates/profile_app/user_crm_page.html
+++ b/profile_app/templates/profile_app/user_crm_page.html
@@ -16,7 +16,13 @@
                     <div class="media-content">
                         <p class="title is-4 mb-0">{{ user }}</p>
                         <span class="subtitle is-6">user id: {{ user.id }}</span>
-                        <p class="subtitle is-6"><a href="#">{{ user.email }}</a></p>
+                        <!-- <p class="subtitle is-6"><a href="#">{{ user.email }}</a></p> -->
+
+                        <div>
+                            <a class="subtitle has-text-link is-6 js-modal-trigger"
+                                data-target="modal-js-example">{{ user.email }}</a>
+                        </div>
+
                         <p>{{ posts.count }} posts | {{ comments.count }} comment</p>
                     </div>
                 </div>
@@ -110,7 +116,7 @@
                 {% for comment in comments %}
                 <tbody>
                     <tr>
-                        <td>{{ comment.content }}</td>
+                        <td>{{ comment.content.html|safe|truncatechars:20 }}</td>
                         <td><a href="{{ comment.post.get_absolute_url }}">{{ comment.post.title }}</a></td>
                         <td>{{ comment.date_posted|date:'d-M-Y g:ia' }}</td>
                         <!-- <td>{{ comment.id }}</td> -->
@@ -130,4 +136,66 @@
 
     </section>
 </div>
+
+<!-- modal -->
+<div id="modal-js-example" class="modal">
+    <div class="modal-background"></div>
+
+    <div class="modal-content">
+        <div class="box">
+            <p>Email {{ user.email }}</p>
+            <p>Modal JS example</p>
+            <!-- Your content -->
+        </div>
+    </div>
+
+    <button class="modal-close is-large" aria-label="close"></button>
+</div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        // Functions to open and close a modal
+        function openModal($el) {
+            $el.classList.add('is-active');
+        }
+
+        function closeModal($el) {
+            $el.classList.remove('is-active');
+        }
+
+        function closeAllModals() {
+            (document.querySelectorAll('.modal') || []).forEach(($modal) => {
+                closeModal($modal);
+            });
+        }
+
+        // Add a click event on buttons to open a specific modal
+        (document.querySelectorAll('.js-modal-trigger') || []).forEach(($trigger) => {
+            const modal = $trigger.dataset.target;
+            const $target = document.getElementById(modal);
+
+            $trigger.addEventListener('click', () => {
+                openModal($target);
+            });
+        });
+
+        // Add a click event on various child elements to close the parent modal
+        (document.querySelectorAll('.modal-background, .modal-close, .modal-card-head .delete, .modal-card-foot .button') || []).forEach(($close) => {
+            const $target = $close.closest('.modal');
+
+            $close.addEventListener('click', () => {
+                closeModal($target);
+            });
+        });
+
+        // Add a keyboard event to close all modals
+        document.addEventListener('keydown', (event) => {
+            const e = event || window.event;
+
+            if (e.keyCode === 27) { // Escape key
+                closeAllModals();
+            }
+        });
+    });
+</script>
 {% endblock content %}
