--- a/board_app/templates/board_app/delete_comment.html
+++ b/board_app/templates/board_app/delete_comment.html
@@ -5,6 +5,14 @@
 <div class="crm columns">
     <section class="section column is-8-desktop is-offset-2-desktop is-6-widescreen is-offset-3-widescreen">
         <h3 class="subtitle is-3 mb-6">Delete comment?</h3>
+
+
+
+        <!-- <div class="column is-narrow">
+        <figure class="image container is-48x48 ml-0">
+            <img class="is-rounded" src="{{ user_profile.image.url }}" height="60" alt="">
+        </figure>
+        </div> -->
         <div class="card">
             <div class="card-content">
                 <div class="content">
