--- a/board_app/templates/board_app/post_detail.html
+++ b/board_app/templates/board_app/post_detail.html
@@ -8,11 +8,22 @@
     </div>
     <section class="section">
         <div class="post-container">
-            <div>
+            <div class="mb-4">
                 <h2 class="subtitle is-2">{{ post.title }}</h2>
             </div>
-            <h4 class="subtitle is-4">{{ post.subtitle }}</h4>
-            {{ post.content.html|safe }}
+
+            <div class="columns">
+                {% if not post.image %}
+                {% else %}
+                <div class="column">
+                    <img src="{{ post.image.url }}" alt="">
+                </div>
+                {% endif %}
+                <div class="column">
+                    <p class="is-size-2">{{ post.content.html|safe }}</p>
+                </div>
+            </div>
+
             {% if object.author == user %}
             <div class="post-edit-container pt-5 pb-2">
                 <a class="button is-small is-dark is-outlined mr-2" href="{% url 'edit_post' post.slug %}">Edit
@@ -21,51 +32,40 @@
                     post</a>
             </div>
             {% endif %}
-            <div class="hr mt-5"></div>
-            <div class="post-footer mt-2">
+
+            <div class="post-footer mt-2 is-size-6">
                 <p>[Author] {{ post.author }}</p>
                 <p>{{ post.date_posted|date:'d-M-Y g:ia' }}</p>
             </div>
-            <div class="post-footer mt-2 flex">
-                <span>
-                    {% if not post.comments.all %}
-                    <!-- <a class="button is-light" href="{% url 'add_comment' post.pk %}"> -->
+            <div class="post-footer mt-2 flex is-size-6">
+                <div>
                     <div class="flex">
-                        <!-- comment icon -->
-                        <svg class="mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22">
-                            <path fill="none" d="M0 0h24v24H0z" />
-                            <path d="M10 3h4a8 8 0 1 1 0 16v3.5c-5-2-12-5-12-11.5a8 8 0 0 1 8-8z"
-                                fill="rgba(137,137,137,1)" />
-                        </svg>
-                        <span class="has-text-grey">{{ post.comments.count }} comment{{ post.comments.count|pluralize }}
-                        </span>
-                        <!-- heart -->
-                        <a class="ml-4 mr-1 pr-0" href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                        <!-- comment icon link -->
+                        <a class="pr-0" href="{% url 'add_comment' post.pk %}">
+                            <svg class="mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20"
+                                height="20">
+                                <path fill="none" d="M0 0h24v24H0z" />
+                                <path d="M10 3h4a8 8 0 1 1 0 16v3.5c-5-2-12-5-12-11.5a8 8 0 0 1 8-8z"
+                                    fill="rgba(137,137,137,1)" />
+                            </svg>
+                            <p class="has-text-grey">{{ post.comments.count }}
+                                comment{{ post.comments.count|pluralize }}
+                            </p>
+                        </a>
+                        <!-- heart icon link -->
+                        <a class="ml-4 pr-0" href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20">
                                 <path fill="none" d="M0 0H24V24H0z" />
                                 <path
                                     d="M12.001 4.529c2.349-2.109 5.979-2.039 8.242.228 2.262 2.268 2.34 5.88.236 8.236l-8.48 8.492-8.478-8.492c-2.104-2.356-2.025-5.974.236-8.236 2.265-2.264 5.888-2.34 8.244-.228z"
                                     fill="rgba(137,137,137,1)" />
                             </svg>
+                            <p class="has-text-grey ml-1">{{ post.like.count }}
+                                like{{ post.like.count|pluralize }}
+                            </p>
                         </a>
-                        <p class="has-text-grey">{{ post.comments.count }} like{{ post.comments.count|pluralize }}
-                        </p>
                     </div>
-                    <!-- </a> -->
-                    <!-- <p class="has-text-grey">No comments yet...</p> -->
-                    {% else %}
-                    <div class="flex">
-                        <!-- comment icon -->
-                        <svg class="mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22">
-                            <path fill="none" d="M0 0h24v24H0z" />
-                            <path d="M10 3h4a8 8 0 1 1 0 16v3.5c-5-2-12-5-12-11.5a8 8 0 0 1 8-8z"
-                                fill="rgba(137,137,137,1)" />
-                        </svg>
-                        <span class="has-text-grey">{{ post.comments.count }} comment{{ post.comments.count|pluralize }}
-                        </span>
-                    </div>
-                    {% endif %}
-                </span>
+                </div>
                 <span class="pl-4">
                     {% for tag in post.tags.all %}
                     <a class="has-text-weight-bold" href="{% url 'tag_post_page' tag.slug %}">
@@ -87,6 +87,8 @@
                 {% endcomment %}
 
             </div>
+            <div class="hr mt-5"></div>
+
             <a class="button is-success mt-5" href="{% url 'add_comment' post.pk %}">
                 add a comment
             </a>
