--- a/board_app/templates/board_app/components/author_post_list_elements.html
+++ b/board_app/templates/board_app/components/author_post_list_elements.html
@@ -5,39 +5,37 @@
     {% for post in related_items %}
     <div class="post-container post-container-index mb-5">
         <a class="title-link" href="{{ post.get_absolute_url }}">
-            <h4 class="is-size-4 article-title-link">{{ post.title }}
+            <h4 class="is-size-5 article-title-link mb-2">{{ post.title }}
                 <!-- <svg class="title-svg" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
                     transform: ;msFilter:;">
                     <path d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z"></path>
                 </svg> -->
             </h4>
         </a>
-
-        <h4 class="subtitle is-6">{{ post.subtitle }}</h5>
-            <p> {{ post.content.html|safe}}</p>
-            <div class="post-footer">
-                <p>[Author] {{ post.author }}</p>
-                <p>{{ post.date_posted|date:'d-M-Y g:ia' }}</p>
-            </div>
-            <div class="post-footer">
-                {% for tag in post.tags.all %}
-                <a class="has-text-weight-bold" href="{% url 'tag_post_page' tag.slug %}">
-                    <p>#{{ tag.name }}</p>
-                </a>
-                {% endfor %}
-            </div>
-            <!-- <div class="">
-            {% if not post.comments.all %}
-            <p class="has-text-grey">No comments yet</p>
+        <div class="mb-2">
+            {% if not post.image %}
             {% else %}
-            <p class="has-text-grey">{{ post.comments.count }} comment{{ post.comments.count|pluralize }}</p>
+            <img class="aside-image" src="{{ post.image.url }}" alt="">
             {% endif %}
-        </div> -->
+        </div>
+
+        <p> {{ post.content.html|safe|truncatechars:120 }}</p>
+        <div class="post-footer">
+            <p>[Author] {{ post.author }}</p>
+            <p>{{ post.date_posted|date:'d-M-Y g:ia' }}</p>
+        </div>
+        <div class="post-footer">
+            {% for tag in post.tags.all %}
+            <a class="has-text-weight-bold" href="{% url 'tag_post_page' tag.slug %}">
+                <p>#{{ tag.name }}</p>
+            </a>
+            {% endfor %}
+        </div>
     </div>
     {% endfor %}
     {% else %}
-    <!-- <h3 class="is-size-6 has-text-grey">Couldn't find any related articles</h3> -->
-    {% endif %}
+    <h6 class="is-size-6 has-text-grey">No related articles at this time</h3>
+        {% endif %}
 
 
 </section>
