--- a/board_app/templates/board_app/components/post_list_elements.html
+++ b/board_app/templates/board_app/components/post_list_elements.html
@@ -1,38 +1,61 @@
 {% include 'board_app/components/hero.html' %}
 <div class="section">
     {% for post in posts %}
-    <div class="post-container post-container-index mb-6">
-        <a class="title-link" href="{{ post.get_absolute_url }}">
-            <h2 class="subtitle is-2 article-title-link">{{ post.title }}
-                <svg class="title-svg" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
-                    transform: ;msFilter:;">
-                    <path d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z">
-                    </path>
-                </svg>
-            </h2>
+    <div class="post-container post-container-index mb-5">
+        <!-- <p class="is-size-6">in room: <a href="/room/{{category.slug}}">{{ post.category }}</a></p> -->
+        <a class="title-link mb-4" href="{{ post.get_absolute_url }}">
+            <h2 class="subtitle is-2 article-title-link">{{ post.title }}</h2>
         </a>
-
-        <h4 class="subtitle">{{ post.subtitle }}</h4>
-
-        <div class="hr mt-5 mb-2"></div>
-        <div class="post-footer">
+        <div class="columns">
+            {% if not post.image %}
+            {% else %}
+            <div class="column">
+                <img class="post-image" src="{{ post.image.url }}" alt="">
+            </div>
+            {% endif %}
+            <div class="column">
+                <p class="is-size-2">{{ post.content.html|safe|truncatechars:420 }}</p>
+            </div>
+        </div>
+        <div class="post-footer mt-2 is-size-6">
             <p>[Author] {{ post.author }}</p>
             <p>{{ post.date_posted|date:'d-M-Y g:ia' }}</p>
-            {% for tag in post.tags.all %}
-            <a class="has-text-weight-bold" href="{% url 'tag_post_page' tag.slug %}">
-                <p>#{{ tag.name }}</p>
-            </a>
-
-            {% endfor %}
         </div>
-        <div class="">
-            {% if not post.comments.all %}
-            <p class="has-text-grey">No comments yet</p>
-            {% else %}
-            <p class="has-text-grey">{{ post.comments.count }}
-                comment{{ post.comments.count|pluralize }}</p>
-            {% endif %}
+        <div class="post-footer mt-2 flex is-size-6">
+            <div>
+                <div class="flex">
+                    <!-- comment icon link -->
+                    <a class="pr-0" href="{% url 'add_comment' post.pk %}">
+                        <svg class="mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20">
+                            <path fill="none" d="M0 0h24v24H0z" />
+                            <path d="M10 3h4a8 8 0 1 1 0 16v3.5c-5-2-12-5-12-11.5a8 8 0 0 1 8-8z"
+                                fill="rgba(137,137,137,1)" />
+                        </svg>
+                        <p class="has-text-grey">{{ post.comments.count }} comment{{ post.comments.count|pluralize }}
+                        </p>
+                    </a>
+                    <!-- heart icon link -->
+                    <a class="ml-4 pr-0" href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20">
+                            <path fill="none" d="M0 0H24V24H0z" />
+                            <path
+                                d="M12.001 4.529c2.349-2.109 5.979-2.039 8.242.228 2.262 2.268 2.34 5.88.236 8.236l-8.48 8.492-8.478-8.492c-2.104-2.356-2.025-5.974.236-8.236 2.265-2.264 5.888-2.34 8.244-.228z"
+                                fill="rgba(137,137,137,1)" />
+                        </svg>
+                        <p class="has-text-grey ml-1">{{ post.like.count }} like{{ post.like.count|pluralize }}
+                        </p>
+                    </a>
+                </div>
+            </div>
+            <span class="pl-4">
+                {% for tag in post.tags.all %}
+                <a class="has-text-weight-bold" href="{% url 'tag_post_page' tag.slug %}">
+                    <p>#{{ tag.name }}</p>
+                </a>
+                {% endfor %}
+            </span>
         </div>
+        <div class="hr mt-5"></div>
     </div>
     {% endfor %}
     {# pagination #}
